@@ -10,4 +10,5 @@ require 'spec/runner/base_text_formatter'
 require 'spec/runner/progress_bar_formatter'
 require 'spec/runner/rdoc_formatter'
 require 'spec/runner/specdoc_formatter'
+require 'spec/runner/html_formatter'
 require 'spec/runner/spec_matcher'
